--- a/lang/en.json
+++ b/lang/en.json
@@ -11,7 +11,7 @@
     "Zoom Meeting": "Zoom Meeting",
     "All Students": "All Students",
     "Student Admission": "Student Admission",
-    "Course": "Course",
+    "Course": "Class",
     "Exam": "Exam",
     "Event List": "Event List",
     "Grade": "Grade",
@@ -54,13 +54,13 @@
     "Payment": "Payment",
     "Upgrade": "Upgrade",
     "Other": "Other",
-    "My Course": "My Course",
+    "My Course": "My Class",
     "Children": "Children",
     "Online Class": "Online Class",
     "Messages": "Messages",
     "Schedule": "Schedule",
     "Fees Payment": "Fees Payment",
-    "My Courses": "My Courses",
+    "My Courses": "My Classes",
     "My Classes": "My Classes",
     "My Schedule": "My Schedule",
     "Online Classes": "Online Classes",
@@ -134,7 +134,7 @@
     "Submit": "Submit",
     "Student Information": "Student Information",
     "Parent Information": "Parent Information",
-    "Course & Plan": "Course & Plan",
+    "Course & Plan": "Class & Plan",
     "Male": "Male",
     "Female": "Female",
     "Select Avatar": "Select Avatar",
@@ -172,9 +172,9 @@
     "All Notice": "All Notice",
     "Notice Details": "Notice Details",
     "Comments": "Comments",
-    "Course List": "Course List",
-    "Course Management": "Course Management",
-    "Add Course": "Add Course",
+    "Course List": "Class List",
+    "Course Management": "Class Management",
+    "Add Course": "Add Class",
     "Created at": "Created at",
     "Create New Plan": "Create New Plan",
     "Has Multiple Subject": "Has Multiple Subject",
@@ -240,7 +240,7 @@
     "From": "From",
     "Select a student": "Select a student",
     "Roll No": "Roll No",
-    "Select Course": "Select Course",
+    "Select Course": "Select Class",
     "No Department Available": "No Department Available",
     "Promoting To": "Promoting To",
     "Attendance Report": "Attendance Report",
@@ -373,7 +373,7 @@
     "All Teachers": "All Teachers",
     "Basic Information": "Basic Information",
     "Academic Information": "Academic Information",
-    "Course & Subject": "Course & Subject",
+    "Course & Subject": "Class & Subject",
     "Add New Teachers": "Add New Teachers",
     "Teacher Details": "Teacher Details",
     "Teacher Information": "Teacher Information",
@@ -488,7 +488,7 @@
     "Select a subject": "Select a subject",
     "Start Class": "Start Class",
     "Start Link": "Start Link",
-    "Course Topic": "Course Topic",
+    "Course Topic": "Class Topic",
     "Completed": "Completed",
     "Upcoming": "Upcoming",
     "Create a new class": "Create a new class",
@@ -502,14 +502,14 @@
     "Roll": "Roll",
     "Student Name": "Student Name",
     "Student List": "Student List",
-    "Course Schedule": "Course Schedule",
+    "Course Schedule": "Class Schedule",
     "Assignments": "Assignments",
     "Join Link": "Join Link",
     "Join": "Join",
-    "No Course Available": "No Course Available",
+    "No Course Available": "No Class Available",
     "Next Class": "Next Class",
     "Class by": "Class by",
-    "Course by": "Course by",
+    " by": "Class by",
     "Join Class": "Join Class",
     "Pending Assignments": "Pending Assignments",
     "Total Subjects": "Total Subjects",
@@ -706,8 +706,8 @@
     "Read Full Notice": "Read Full Notice",
     "Exams": "Exams",
     "Create A New Plan": "Create A New Plan",
-    "Create A New Course": "Create A New Course",
-    "Edit Course": "Edit Course",
+    "Create A New Course": "Create A New Class",
+    "Edit Course": "Edit Class",
     "Color": "Color",
     "Participants": "Participants",
     "Cause": "Cause",
@@ -834,7 +834,7 @@
     "Exam Grade Rules": "Exam Grade Rules",
     "Key to Grades": "Key to Grades",
     "Current Result": "Current Result",
-    "Next Course Status": "Next Course Status",
+    "Next Course Status": "Next Class Status",
     "Promotion To": "Promotion To",
     "Promotion From": "Promotion From",
     "Pass": "Pass",
@@ -868,8 +868,13 @@
     "Grade Remark" : "Grade Remark",
     "Click to see" : "Click to see",
     "Transaction create" : "Transaction create",
-    "From Course":"From Course",
-    "To Course": "To Course",
+    "From Course":"From Class",
+    "To Course": "To Class",
+    "All Courses": "All Classes",
+    "Class QR Codes": "Class QR Code",
+    "Unique Id": "Unique Id",
+    "Teacher Attendance": "Teacher attendance",
+    "Teacher Class Attendance": "Teacher Class Attendance",
     "National Identification Number" : "National Identification Number",
     "Blood Group" : "Blood Group",
     "Physical Disability" : "Physical Disability",
