--- a/lang/id.json
+++ b/lang/id.json
@@ -10,7 +10,7 @@
   "Meeting": "Pertemuan",
   "All Students": "Semua Siswa",
   "Student Admission": "Penerimaan Siswa",
-  "Course": "Kursus",
+  "Course": "Kelas",
   "Exam": "Ujian",
   "Event List": "Daftar Acara",
   "Grade": "Nilai",
@@ -53,13 +53,13 @@
   "Payment": "Pembayaran",
   "Upgrade": "Upgrade",
   "Other": "Lainnya",
-  "My Course": "Kursus Saya",
+  "My Course": "Kelas Saya",
   "Children": "Anak-anak",
   "Online Class": "Kelas Online",
   "Messages": "Pesan",
   "Schedule": "Jadwal",
   "Fees Payment": "Pembayaran Biaya",
-  "My Courses": "Kursus Saya",
+  "My Courses": "Kelas Saya",
   "My Classes": "Kelas Saya",
   "My Schedule": "Jadwal Saya",
   "Online Classes": "Kelas Online",
@@ -133,7 +133,7 @@
   "Submit": "Kirim",
   "Student Information": "Informasi Siswa",
   "Parent Information": "Informasi Orang Tua",
-  "Course & Plan": "Kursus & Rencana",
+  "Course & Plan": "Kelas & Rencana",
   "Male": "Laki-laki",
   "Female": "Perempuan",
   "Select Avatar": "Pilih Avatar",
@@ -172,9 +172,9 @@
   "All Notice": "Semua Pemberitahuan",
   "Notice Details": "Detail Pemberitahuan",
   "Comments": "Komentar",
-  "Course List": "Daftar Kursus",
-  "Course Management": "Manajemen Kursus",
-  "Add Course": "Tambah Kursus",
+  "Course List": "Daftar Kelas",
+  "Course Management": "Manajemen Kelas",
+  "Add Course": "Tambah Kelas",
   "Created at": "Dibuat pada",
   "Create New Plan": "Buat Rencana Baru",
   "Has Multiple Subject": "Memiliki Mata Pelajaran Berganda",
@@ -240,7 +240,7 @@
   "From": "Dari",
   "Select a student": "Pilih siswa",
   "Roll No": "Nomor Induk",
-  "Select Course": "Pilih Kursus",
+  "Select Course": "Pilih Kelas",
   "No Department Available": "Tidak Ada Departemen Tersedia",
   "Promoting To": "Menaikkan Kelas ke",
   "Attendance Report": "Laporan Kehadiran",
@@ -373,7 +373,7 @@
   "All Teachers": "Semua Guru",
   "Basic Information": "Informasi Dasar",
   "Academic Information": "Informasi Akademis",
-  "Course & Subject": "Kursus & Mata Pelajaran",
+  "Course & Subject": "Kelas & Mata Pelajaran",
   "Add New Teachers": "Tambah Guru Baru",
   "Teacher Details": "Detail Guru",
   "Teacher Information": "Informasi Guru",
@@ -488,7 +488,7 @@
   "Select a subject": "Pilih mata pelajaran",
   "Start Class": "Mulai Kelas",
   "Start Link": "Tautan Mulai",
-  "Course Topic": "Topik Kursus",
+  "Course Topic": "Topik Kelas",
   "Completed": "Selesai",
   "Upcoming": "Mendatang",
   "Create a new class": "Buat kelas baru",
@@ -502,15 +502,15 @@
   "Roll": "Gulir",
   "Student Name": "Nama Siswa",
   "Student List": "Daftar Siswa",
-  "Course Schedule": "Jadwal Kursus",
+  "Course Schedule": "Jadwal Kelas",
   "Assignments": "Tugas",
   "Student List": "Daftar Siswa",
   "Join Link": "Tautan Bergabung",
   "Join": "Bergabung",
-  "No Course Available": "Tidak Ada Kursus Tersedia",
+  "No Course Available": "Tidak Ada Kelas Tersedia",
   "Next Class": "Kelas Berikutnya",
   "Class by": "Kelas oleh",
-  "Course by": "Kursus oleh",
+  "Course by": "Kelas oleh",
   "Join Class": "Bergabung dengan Kelas",
   "Pending Assignments": "Tugas yang Menunggu",
   "Total Subjects": "Total Mata Pelajaran",
@@ -707,8 +707,8 @@
   "Read Full Notice": "Baca Penuh Pemberitahuan",
   "Exams": "Ujian",
   "Create A New Plan": "Buat Rencana Baru",
-  "Create A New Course": "Buat Kursus Baru",
-  "Edit Course": "Edit Kursus",
+  "Create A New Course": "Buat Kelas Baru",
+  "Edit Course": "Edit Kelas",
   "Color": "Warna",
   "Participants": "Peserta",
   "Cause": "Sebab",
@@ -836,7 +836,12 @@
   "Exam Grade Rules": "Aturan Grade Ujian",
   "Key to Grades": "Kunci untuk Grade",
   "Current Result": "Hasil Saat Ini",
-  "Next Course Status": "Status Kursus Selanjutnya",
+  "Next Course Status": "Status Kelas Selanjutnya",
+  "All Courses": "Semua Kelas",
+  "Class QR Codes": "QR Code Kelas",
+  "Unique Id": "Id unik",
+  "Teacher Attendance": "Kehadiran guru",
+  "Teacher Class Attendance": "Kehadiran guru di kelas",
   "Promotion To": "Promosi Ke",
   "Promotion From": "Promosi Dari",
   "Pass": "Lulus",
